--- a/package.json
+++ b/package.json
@@ -83,17 +83,11 @@
 		"abc2svg": "1.22.1"
 	},
 	"devDependencies": {
-		"@types/glob": "^8.1.0",
-		"@types/mocha": "^10.0.1",
-		"@types/node": "^18.14.2",
 		"@types/vscode": "^1.75.1",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
 		"esbuild": "^0.17.10",
 		"eslint": "^8.35.0",
-		"glob": "^9.0.2",
-		"mocha": "^10.2.0",
-		"typescript": "^4.9.5",
-		"vscode-test": "^1.3.0"
+		"typescript": "^4.9.5"
 	}
 }
