--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "abc-music",
 	"displayName": "ABC Music Notation",
 	"description": "Syntax highlighting, live preview and print support for ABC Music Notation.",
-	"version": "0.4.0",
+	"version": "0.4.0-majcn",
 	"engines": {
 		"vscode": "^1.75.1"
 	},
